--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@studio-freight/lenis": "^1.0.34",
+    "axios": "^1.6.7",
     "framer-motion": "^11.0.3",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
